--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
 .banner img{width:100%;height:auto;display:block;border-radius:8px;box-shadow:0 6px 18px rgba(0,0,0,.08)}
 
 /* wallet sidebar */
-#walletMenuBtn{display:none;position:fixed;top:12px;right:12px;z-index:999;background:var(--accent);border:none;color:#111;font-size:20px;padding:8px 10px;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,.12)}
+/* MENU button moved to LEFT as requested */
+#walletMenuBtn{display:none;position:fixed;top:12px;left:12px;z-index:999;background:var(--accent);border:none;color:#111;font-size:20px;padding:8px 10px;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,.12)}
 #walletSidebar{position:fixed;top:0;right:-420px;width:420px;height:100%;background:#fff3cd;padding:16px;box-shadow:-8px 0 28px rgba(0,0,0,.16);transition:right .36s ease;z-index:998;overflow:auto}
 #walletSidebar.open{right:0}
 .walletTop{background:#fff7e6;padding:10px;border-radius:8px;margin-bottom:12px}
@@ -34,7 +35,7 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
 .tree-list{font-size:14px;text-align:left;padding-left:6px}
 .node{padding:8px;border-radius:6px;margin:8px 0;background:rgba(0,0,0,0.03)}
 .subtree{margin-left:12px;border-left:1px dashed rgba(0,0,0,0.06);padding-left:8px}
-.lock-badge{position:fixed;left:12px;top:12px;background:#fff;padding:6px 10px;border-radius:8px;box-shadow:0 3px 10px rgba(0,0,0,.08);font-size:13px;z-index:120}
+.lock-badge{position:fixed;left:12px;top:60px;background:#fff;padding:6px 10px;border-radius:8px;box-shadow:0 3px 10px rgba(0,0,0,.08);font-size:13px;z-index:120}
 .info-small{font-size:13px;color:#444;margin-top:8px}
 
 /* txn list */
@@ -71,18 +72,17 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
 <body>
 
 <!-- ========== LOCKED UI START ========== -->
-<!-- Login Overlay — now initial screen -->
+<!-- Login Overlay — initial -->
 <div id="loginPage" class="overlay">
   <div class="panel">
     <h2>लॉगिन करें</h2>
     <input id="loginMobile" placeholder="रजिस्टर किया हुआ मोबाइल" inputmode="numeric" maxlength="10" />
     <button id="btnLogin" class="btn-primary">लॉगिन</button>
     <p id="loginError" style="color:#b00"></p>
-    <p class="info-small">यदि नंबर रजिस्टर नहीं है, तो आप रजिस्टर फॉर्म पर पहुंच जाएंगे।</p>
   </div>
 </div>
 
-<!-- Register Overlay (hidden initially) -->
+<!-- Register Overlay (hidden initially) - removed small message below as requested -->
 <div id="registerPage" class="overlay" style="display:none">
   <div class="panel">
     <h2>रजिस्टर करें</h2>
@@ -96,7 +96,6 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
     </select>
     <button id="btnRegister" class="btn-primary">रजिस्टर करें</button>
     <p id="regError" style="color:#b00"></p>
-    <p class="info-small">रजिस्टर होने पर आप tree में पहली खाली जगह पर जुड़ जाएंगे।</p>
   </div>
 </div>
 
@@ -134,7 +133,7 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
 </div>
 <!-- ========== LOCKED UI END ========== -->
 
-<!-- Wallet Menu + Sidebar (opens after Logo page only) -->
+<!-- Wallet Menu + Sidebar (menu button now left) -->
 <button id="walletMenuBtn" aria-label="Open Wallet">☰</button>
 <div id="walletSidebar" aria-hidden="true">
   <div class="walletTop">
@@ -150,6 +149,7 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
       <button id="openTransfer" class="btn-secondary" style="flex:1">Transfer</button>
     </div>
     <div style="height:8px"></div>
+    <!-- My Team button: user must click this to view subtree -->
     <button id="viewMyTeam" class="btn-secondary">View My Team</button>
     <div style="height:8px"></div>
     <div style="font-size:13px;color:#444">Tree members: <span id="treeCount">0</span></div>
@@ -178,9 +178,9 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
 
   <hr style="border:none;height:12px" />
   <div>
-    <h4 style="margin:8px 0 6px">Full Tree</h4>
+    <h4 style="margin:8px 0 6px">Full Tree (names only)</h4>
     <div id="fullTree" class="tree-list" aria-live="polite"></div>
-    <h4 style="margin:10px 0 6px">My Subtree</h4>
+    <h4 style="margin:10px 0 6px">My Subtree (downline)</h4>
     <div id="myTree" class="tree-list"></div>
   </div>
 
@@ -273,7 +273,9 @@ function computeLevels(nodes){
   return levels;
 }
 
-/* draw tree using absolute positioning + svg lines */
+/* draw tree using absolute positioning + svg lines
+   NOTE: nodes will show only NAME (no mobile) as requested
+*/
 function renderGraphicTree(){
   treeCanvas.innerHTML = '<svg class="connector-svg" id="connectorSvg"></svg>';
   const svg = el('connectorSvg');
@@ -306,11 +308,13 @@ function renderGraphicTree(){
       elNode.style.left = x + 'px';
       elNode.style.top = y + 'px';
       elNode.id = 'node-' + idx;
+      // emoji by gender
       let emoji = '🧍';
       if(node.gender === 'male') emoji = '👨';
       else if(node.gender === 'female') emoji = '👩';
       const nameShort = node.name || ('User-'+node.index);
-      elNode.innerHTML = `<div class="node-left"><div class="node-emoji">${emoji}</div><div><div class="node-name">${escapeHtml(nameShort)}</div><div class="node-meta">${node.mobile}</div></div></div>
+      // NOTE: mobile REMOVED from display here (only name)
+      elNode.innerHTML = `<div class="node-left"><div class="node-emoji">${emoji}</div><div><div class="node-name">${escapeHtml(nameShort)}</div></div></div>
         <div class="node-actions"><div class="node-circle" title="add/join">+</div><div style="font-size:11px;color:#666;margin-top:4px">${node.left!==null? '👥':''}</div></div>`;
       treeCanvas.appendChild(elNode);
     }
@@ -372,7 +376,7 @@ function renderTxns(filter){
 
 /* ====== UI and Wallet flow ====== */
 function updateWalletUI(){ const mob = localStorage.getItem(KEY_MOBILE) || '—'; ensureBalance(mob); const amt = getBalance(mob); walletMobileEl.textContent = 'मोबाइल: ' + mob; walletAmountEl.textContent = '₹' + amt; }
-walletBtn.addEventListener('click', ()=>{ sidebar.classList.toggle('open'); sidebar.setAttribute('aria-hidden', sidebar.classList.contains('open') ? 'false' : 'true'); renderFullTreeList(); renderMySubtreeList(); renderTxns(currentFilter); });
+walletBtn.addEventListener('click', ()=>{ sidebar.classList.toggle('open'); sidebar.setAttribute('aria-hidden', sidebar.classList.contains('open') ? 'false' : 'true'); /* DO NOT auto-render my subtree here */ renderFullTreeList(); renderTxns(currentFilter); });
 closeWallet.addEventListener('click', ()=>{ sidebar.classList.remove('open'); sidebar.setAttribute('aria-hidden','true'); });
 
 addMoneyBtn.addEventListener('click', ()=>{ const mobile = localStorage.getItem(KEY_MOBILE); if(!mobile){ alert('Login required'); return;} ensureBalance(mobile); const bal = getBalance(mobile); setBalance(mobile, bal+10); updateWalletUI(); addTxn('add', null, mobile, 10, 'Manual add +10'); alert('₹10 added'); });
@@ -380,79 +384,21 @@ addMoneyBtn.addEventListener('click', ()=>{ const mobile = localStorage.getItem(
 openTransfer.addEventListener('click', ()=>{ transferBox.style.display = transferBox.style.display==='none' ? 'block' : 'none'; transferMsg.textContent=''; });
 btnTransfer.addEventListener('click', ()=>{ transferMsg.textContent=''; const from = localStorage.getItem(KEY_MOBILE); if(!from){ transferMsg.textContent='Login required'; return; } const to = transferTo.value.trim(); const amtRaw = transferAmount.value.trim(); if(!/^[0-9]{10}$/.test(to)){ transferMsg.textContent='कृपया सही To मोबाइल डालें'; return; } if(!amtRaw||isNaN(amtRaw)||Number(amtRaw)<=0){ transferMsg.textContent='सही राशि डालें'; return;} const amt=Math.floor(Number(amtRaw)); const bal=getBalance(from); if(amt>bal){ transferMsg.textContent='Insufficient balance'; return; } const nodes = loadTree(); const exists = nodes.find(n => n && n.mobile===to); if(!exists){ transferMsg.textContent='Recipient not registered'; return; } setBalance(from, bal-amt); ensureBalance(to); setBalance(to, getBalance(to)+amt); addTxn('transfer', from, to, amt, 'User transfer'); updateWalletUI(); transferMsg.style.color='green'; transferMsg.textContent='Transfer successful'; transferTo.value=''; transferAmount.value=''; });
 
-viewMyTeamBtn.addEventListener('click', ()=>{ renderMySubtreeList(); sidebar.classList.add('open'); });
+viewMyTeamBtn.addEventListener('click', ()=>{ // only on click render downline for current user
+  renderMySubtreeList();
+  sidebar.classList.add('open');
+});
 
-filterAll.addEventListener('click', ()=>{ renderTxns('all'); });
-filterMy.addEventListener('click', ()=>{ renderTxns('my'); });
-
-/* Register & Login flows (updated behavior) */
-
-/* Login button: check if mobile exists in tree
-   - if exists -> set KEY_MOBILE and go to Logo page
-   - if not exists -> open Register overlay with mobile prefilled
+/* Full Tree & My Subtree (list form inside sidebar)
+   Note: full tree and my subtree show only NAME (no mobile)
 */
-el('btnLogin').addEventListener('click', ()=>{
-  const mobile = el('loginMobile').value.trim(); el('loginError').textContent='';
-  if(!/^[0-9]{10}$/.test(mobile)){ el('loginError').textContent='कृपया 10 अंकों का मोबाइल नंबर डालें'; return; }
-  const nodes = loadTree();
-  const found = nodes.find(n => n && n.mobile === mobile);
-  if(found){
-    // mobile registered -> set as current user and go to logo
-    localStorage.setItem(KEY_MOBILE, mobile);
-    // optional: remember name
-    localStorage.setItem(KEY_NAME, found.name || '');
-    logP.style.display='none';
-    logoP.style.display='flex';
-  } else {
-    // not registered -> open register form with mobile prefilled
-    el('regMobile').value = mobile;
-    el('regName').value = '';
-    el('regGender').value = 'unknown';
-    el('loginError').textContent = 'यह नंबर रजिस्टर नहीं है — कृपया रजिस्टर करें।';
-    // show register overlay
-    logP.style.display='none';
-    regP.style.display='flex';
-  }
-});
-
-/* Register button: after successful register -> directly go to Logo page (not back to login) */
-el('btnRegister').addEventListener('click', async ()=>{
-  const name = el('regName').value.trim(), mobile = el('regMobile').value.trim(), gender = el('regGender').value || 'unknown';
-  el('regError').textContent = '';
-  if(!/^[0-9]{10}$/.test(mobile)){ el('regError').textContent='कृपया 10 अंकों का मोबाइल नंबर डालें'; return; }
-  // ensure not duplicate
-  const nodes = loadTree();
-  const exists = nodes.find(n => n && n.mobile === mobile);
-  if(exists){ el('regError').textContent = 'यह नंबर पहले से रजिस्टर है — लॉगिन करें।'; return; }
-  // store and create tree node
-  localStorage.setItem(KEY_MOBILE, mobile); localStorage.setItem(KEY_NAME, name||'');
-  ensureBalance(mobile); setBalance(mobile, 0);
-  const res = addNodeToTree(name, mobile, gender);
-  alert('रजिस्टर हुआ — tree index: ' + res.placedAt + (res.parent!==null ? (' (parent: '+res.parent+')') : ' (root)'));
-  addTxn('register', null, mobile, 0, 'Registered');
-  await saveToSheet('register', mobile, name, res.placedAt);
-  // go to logo page directly
-  regP.style.display='none';
-  logoP.style.display='flex';
-});
-
-/* Logo -> Main: show wallet menu button after logo */
-el('btnNext').addEventListener('click', ()=>{
-  logoP.style.display = 'none'; mainP.style.display = 'block'; walletBtn.style.display = 'block';
-  updateWalletUI(); renderGraphicTree(); renderFullTreeList(); renderMySubtreeList(); renderTxns('my');
-});
-
-/* logout */
-el('btnLogout').addEventListener('click', ()=>{ mainP.style.display='none'; logP.style.display='flex'; walletBtn.style.display='none'; });
-
-/* Full Tree & My Subtree (list form inside sidebar) */
 function renderFullTreeList(){
   const nodes = loadTree();
   fullTreeEl.innerHTML = '';
   if(nodes.length===0){ fullTreeEl.textContent='Tree empty'; treeCountEl.textContent='0'; return; }
   treeCountEl.textContent = String(nodes.length);
   nodes.forEach(n => {
-    const d = document.createElement('div'); d.className='node'; d.textContent = `${n.index}: ${n.name || '(No name)'} — ${n.mobile}`;
+    const d = document.createElement('div'); d.className='node'; d.textContent = `${n.index}: ${n.name || '(No name)'} `;
     fullTreeEl.appendChild(d);
   });
 }
@@ -465,15 +411,61 @@ function renderMySubtreeList(){
   if(!me){ myTreeEl.textContent='आपका रिकॉर्ड tree में नहीं मिला'; return; }
   const pack = document.createElement('div');
   function rec(idx, container){
-    const node = nodes[idx]; const elDiv = document.createElement('div'); elDiv.className='node'; elDiv.textContent = `${node.index}: ${node.name || '(No name)'} — ${node.mobile}`; container.appendChild(elDiv);
+    const node = nodes[idx]; const elDiv = document.createElement('div'); elDiv.className='node'; elDiv.textContent = `${node.name || '(No name)'}`; container.appendChild(elDiv);
     if(node.left!==null || node.right!==null){
       const c = document.createElement('div'); c.className='subtree';
       if(node.left!==null) rec(node.left, c); if(node.right!==null) rec(node.right, c);
       container.appendChild(c);
     }
   }
+  // only show downline (descendants). parents not shown.
   rec(me.index, pack); myTreeEl.appendChild(pack);
 }
+
+/* ====== Register & Login flows (unchanged except as earlier) */
+el('btnLogin').addEventListener('click', ()=>{
+  const mobile = el('loginMobile').value.trim(); el('loginError').textContent='';
+  if(!/^[0-9]{10}$/.test(mobile)){ el('loginError').textContent='कृपया 10 अंकों का मोबाइल नंबर डालें'; return; }
+  const nodes = loadTree();
+  const found = nodes.find(n => n && n.mobile === mobile);
+  if(found){
+    localStorage.setItem(KEY_MOBILE, mobile);
+    localStorage.setItem(KEY_NAME, found.name || '');
+    logP.style.display='none';
+    logoP.style.display='flex';
+  } else {
+    el('regMobile').value = mobile;
+    el('regName').value = '';
+    el('regGender').value = 'unknown';
+    el('loginError').textContent = 'यह नंबर रजिस्टर नहीं है — कृपया रजिस्टर करें।';
+    logP.style.display='none';
+    regP.style.display='flex';
+  }
+});
+
+el('btnRegister').addEventListener('click', async ()=>{
+  const name = el('regName').value.trim(), mobile = el('regMobile').value.trim(), gender = el('regGender').value || 'unknown';
+  el('regError').textContent = '';
+  if(!/^[0-9]{10}$/.test(mobile)){ el('regError').textContent='कृपया 10 अंकों का मोबाइल नंबर डालें'; return; }
+  const nodes = loadTree();
+  const exists = nodes.find(n => n && n.mobile === mobile);
+  if(exists){ el('regError').textContent = 'यह नंबर पहले से रजिस्टर है — लॉगिन करें।'; return; }
+  localStorage.setItem(KEY_MOBILE, mobile); localStorage.setItem(KEY_NAME, name||'');
+  ensureBalance(mobile); setBalance(mobile, 0);
+  const res = addNodeToTree(name, mobile, gender);
+  alert('रजिस्टर हुआ — tree index: ' + res.placedAt + (res.parent!==null ? (' (parent: '+res.parent+')') : ' (root)'));
+  addTxn('register', null, mobile, 0, 'Registered');
+  await saveToSheet('register', mobile, name, res.placedAt);
+  regP.style.display='none';
+  logoP.style.display='flex';
+});
+
+el('btnNext').addEventListener('click', ()=>{
+  logoP.style.display = 'none'; mainP.style.display = 'block'; walletBtn.style.display = 'block';
+  updateWalletUI(); renderGraphicTree(); renderFullTreeList(); renderTxns('my');
+});
+
+el('btnLogout').addEventListener('click', ()=>{ mainP.style.display='none'; logP.style.display='flex'; walletBtn.style.display='none'; });
 
 /* ========== Sheet Save helper ========== */
 async function saveToSheet(action, mobile, name, amount, toMobile, toAmount){
@@ -490,16 +482,14 @@ async function saveToSheet(action, mobile, name, amount, toMobile, toAmount){
 
 /* ========== Auto-Lock & Init ========== */
 window.addEventListener('DOMContentLoaded', ()=>{
-  // integrity check (locked markers)
   const html = document.documentElement.innerHTML;
   if(!html.includes('LOCKED UI START') || !html.includes('LOCKED UI END')){
-    alert('⚠️ Locked code modified. Reloadिंग to recover original.');
+    alert('⚠️ Locked code modified. Reloading to recover original.');
     location.reload();
   }
-  // initial UI state: show Login first (as requested)
+  // initial UI state: show Login first
   regP.style.display='none'; logP.style.display='flex'; logoP.style.display='none'; mainP.style.display='none';
   walletBtn.style.display='none';
-  // init storage if missing
   if(!localStorage.getItem(KEY_TREE)) localStorage.setItem(KEY_TREE, JSON.stringify([]));
   if(!localStorage.getItem(KEY_TXN)) localStorage.setItem(KEY_TXN, JSON.stringify([]));
   if(!localStorage.getItem(KEY_BALANCES)) localStorage.setItem(KEY_BALANCES, JSON.stringify({}));
