--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ const ADMIN_PASSWORD = "Rjpapad@2025";
 
 // Optional: if you'd like to log actions to a Google Apps Script webhook (sheet),
 // set SHEET_WEBHOOK_URL to that script's published Web App URL.
-const SHEET_WEBHOOK_URL = ""; // e.g. "https://script.google.com/macros/s/XXXX/exec"
+const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbzdekKL_FrMrfoENya3VkzZTZ4o25NOxoLpVue6St4VJ4jS5WOs7u1257a87vCnm5jx/exec";
 
 /* ============================
    STORAGE KEYS & HELPERS
